--- a/K-Nearest Neighbors/Predicting Car Prices.ipynb
+++ b/K-Nearest Neighbors/Predicting Car Prices.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project , we'll try to predict a car's market price usign its attributes. The data set we will working with contains information on various cars. You can read more about the data set [here](https://archive.ics.uci.edu/ml/datasets/automobile) and can download it directly from [here](https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data)."
+    "In this project , we'll try to predict a car's market price using its attributes. The data set we will working with contains information on various cars. You can read more about the data set [here](https://archive.ics.uci.edu/ml/datasets/automobile) and can download it directly from [here](https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data)."
    ]
   },
   {
